# python/mzcloud/api/mz_versions/mz_versions_latest_retrieve.py
@@ -5,20 +5,19 @@ import httpx
 from ...client import AuthenticatedClient, Client
 from ...types import Response, UNSET
 
-from typing import cast
-from ...models.deployment import Deployment
-from typing import Dict
+from ...types import UNSET, Unset
+from typing import Union
 
 
 
 def _get_kwargs(
     *,
     client: AuthenticatedClient,
-    id: str,
+    track: Union[Unset, str] = 'stable',
 
 ) -> Dict[str, Any]:
-    url = "{}/api/deployments/{id}".format(
-        client.base_url,id=id)
+    url = "{}/api/mz-versions/latest".format(
+        client.base_url)
 
     headers: Dict[str, Any] = client.get_headers()
     cookies: Dict[str, Any] = client.get_cookies()
@@ -27,7 +26,11 @@ def _get_kwargs(
 
     
 
-    
+    params: Dict[str, Any] = {
+        "track": track,
+    }
+    params = {k: v for k, v in params.items() if v is not UNSET and v is not None}
+
 
     
 
@@ -38,20 +41,18 @@ def _get_kwargs(
         "headers": headers,
         "cookies": cookies,
         "timeout": client.get_timeout(),
+        "params": params,
     }
 
 
-def _parse_response(*, response: httpx.Response) -> Optional[Deployment]:
+def _parse_response(*, response: httpx.Response) -> Optional[str]:
     if response.status_code == 200:
-        response_200 = Deployment.from_dict(response.json())
-
-
-
+        response_200 = response.json()
         return response_200
     return None
 
 
-def _build_response(*, response: httpx.Response) -> Response[Deployment]:
+def _build_response(*, response: httpx.Response) -> Response[str]:
     return Response(
         status_code=response.status_code,
         content=response.content,
@@ -63,12 +64,12 @@ def _build_response(*, response: httpx.Response) -> Response[Deployment]:
 def sync_detailed(
     *,
     client: AuthenticatedClient,
-    id: str,
+    track: Union[Unset, str] = 'stable',
 
-) -> Response[Deployment]:
+) -> Response[str]:
     kwargs = _get_kwargs(
         client=client,
-id=id,
+track=track,
 
     )
 
@@ -81,26 +82,26 @@ id=id,
 def sync(
     *,
     client: AuthenticatedClient,
-    id: str,
+    track: Union[Unset, str] = 'stable',
 
-) -> Optional[Deployment]:
-    """ Fetch details about a single deployment. """
+) -> Optional[str]:
+    """ Returns the latest version of Materialize. """
 
     return sync_detailed(
         client=client,
-id=id,
+track=track,
 
     ).parsed
 
 async def asyncio_detailed(
     *,
     client: AuthenticatedClient,
-    id: str,
+    track: Union[Unset, str] = 'stable',
 
-) -> Response[Deployment]:
+) -> Response[str]:
     kwargs = _get_kwargs(
         client=client,
-id=id,
+track=track,
 
     )
 
@@ -114,13 +115,13 @@ id=id,
 async def asyncio(
     *,
     client: AuthenticatedClient,
-    id: str,
+    track: Union[Unset, str] = 'stable',
 
-) -> Optional[Deployment]:
-    """ Fetch details about a single deployment. """
+) -> Optional[str]:
+    """ Returns the latest version of Materialize. """
 
     return (await asyncio_detailed(
         client=client,
-id=id,
+track=track,
 
     )).parsed
