# rust/src/apis/mz_versions_api.rs
@@ -15,6 +15,13 @@ use crate::apis::ResponseContent;
 use super::{Error, configuration};
 
 
+/// struct for typed errors of method `mz_versions_latest_retrieve`
+#[derive(Debug, Clone, Serialize, Deserialize)]
+#[serde(untagged)]
+pub enum MzVersionsLatestRetrieveError {
+    UnknownValue(serde_json::Value),
+}
+
 /// struct for typed errors of method `mz_versions_list`
 #[derive(Debug, Clone, Serialize, Deserialize)]
 #[serde(untagged)]
@@ -22,6 +29,39 @@ pub enum MzVersionsListError {
     UnknownValue(serde_json::Value),
 }
 
+
+/// Returns the latest version of Materialize.
+pub async fn mz_versions_latest_retrieve(configuration: &configuration::Configuration, track: Option<&str>) -> Result<String, Error<MzVersionsLatestRetrieveError>> {
+
+    let local_var_client = &configuration.client;
+
+    let local_var_uri_str = format!("{}/api/mz-versions/latest", configuration.base_path);
+    let mut local_var_req_builder = local_var_client.request(reqwest::Method::GET, local_var_uri_str.as_str());
+
+    if let Some(ref local_var_str) = track {
+        local_var_req_builder = local_var_req_builder.query(&[("track", &local_var_str.to_string())]);
+    }
+    if let Some(ref local_var_user_agent) = configuration.user_agent {
+        local_var_req_builder = local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
+    }
+    if let Some(ref local_var_token) = configuration.bearer_access_token {
+        local_var_req_builder = local_var_req_builder.bearer_auth(local_var_token.to_owned());
+    };
+
+    let local_var_req = local_var_req_builder.build()?;
+    let local_var_resp = local_var_client.execute(local_var_req).await?;
+
+    let local_var_status = local_var_resp.status();
+    let local_var_content = local_var_resp.text().await?;
+
+    if !local_var_status.is_client_error() && !local_var_status.is_server_error() {
+        serde_json::from_str(&local_var_content).map_err(Error::from)
+    } else {
+        let local_var_entity: Option<MzVersionsLatestRetrieveError> = serde_json::from_str(&local_var_content).ok();
+        let local_var_error = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
+        Err(Error::ResponseError(local_var_error))
+    }
+}
 
 /// List the versions of Materialize known to Materialize Cloud.  Versions are listed in order from oldest to newest.
 pub async fn mz_versions_list(configuration: &configuration::Configuration, ) -> Result<Vec<String>, Error<MzVersionsListError>> {
