# rust/src/models/mod.rs
@@ -2,6 +2,8 @@ pub mod deployment;
 pub use self::deployment::Deployment;
 pub mod deployment_request;
 pub use self::deployment_request::DeploymentRequest;
+pub mod deployment_size_enum;
+pub use self::deployment_size_enum::DeploymentSizeEnum;
 pub mod organization;
 pub use self::organization::Organization;
 pub mod patched_deployment_request;
@@ -10,5 +12,3 @@ pub mod pending_migration;
 pub use self::pending_migration::PendingMigration;
 pub mod pending_migration_request;
 pub use self::pending_migration_request::PendingMigrationRequest;
-pub mod size_enum;
-pub use self::size_enum::SizeEnum;
